--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "nextjs-jest-ts-barebone",
+  "name": "faceloca-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "standardx && jest --env=jsdom"
+    "test": "standardx && jest"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "next": "9.5.5",
     "react": "16.14.0",
     "react-dom": "16.14.0"
